@@ -1,5 +1,9 @@
 2004-09-09 Gonzalo Paniagua Javier <gonzalo@ximian.com>
 
+	* src/mod_mono.c: removed the timeout code by now. It's buggy.
+
+2004-09-09 Gonzalo Paniagua Javier <gonzalo@ximian.com>
+
 	* src/mod_mono.c: FLUSH is a noop now. Will be removed. Added send, recv
 	and timeout functions for apache 1.3 module. Buffer initial data for
 	writing. Every read/write may timeout now.
